--- a/style.css
+++ b/style.css
@@ -12,21 +12,49 @@ body {
     text-align: center;
     font-family: 'Comfortaa', cursive;
 }
-.flex-container {
+.container {
     height: 600px;
     width: 600px;
     display: flex;
     flex-flow: wrap row;
     align-content: center;
     justify-content: center;
+    perspective: 1000px;
 }
-.flex-item {
+.card {
     font-family: 'Comfortaa', cursive;
     color: coral;
     width: 150px;
     height: 150px;
     margin: 3px;
+    border-radius: 15px;
     background-color: #f9efe5;
     text-align: center;
+    position: relative;
+    transform-style: preserve-3d;
+}
+.front,
+.back {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1em;
+    position: absolute;
     border-radius: 15px;
+}
+.front {
+    background: linear-gradient(#f9efe5, whitesmoke);
+    z-index: 1;
+    backface-visibility: hidden;
+}
+.back {
+    background: linear-gradient(coral, brown);
+    transform: rotateY(180deg);
+    color: #f9efe5;
+}
+.card:hover {
+    transform: rotateY(180deg);
+    transition: all 1s linear;
 }
